Bug 119705 Problems when resource locations have case mis-match